[gd_scene load_steps=2 format=3 uid="uid://6t7utk468tfg"]

[ext_resource type="Script" path="res://UI/LevelUpScreen/LevelUpScreen.gd" id="1_yk5mx"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3

[node name="LevelUpScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk5mx")

[node name="StatsContainer" type="PanelContainer" parent="LevelUpScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -46.0
offset_right = 238.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="LevelUpScreen/StatsContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
bbcode_enabled = true
text = "fsdhdfhdfhfdhdfhfd"
fit_content = true

[node name="UpgradeContainer" type="PanelContainer" parent="LevelUpScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -70.0
offset_right = 266.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LevelUpScreen/UpgradeContainer"]
layout_mode = 2

[node name="SkillContainer" type="PanelContainer" parent="LevelUpScreen/UpgradeContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUpScreen/UpgradeContainer/HBoxContainer/SkillContainer"]
layout_mode = 2

[node name="DescriptionContainer" type="PanelContainer" parent="LevelUpScreen/UpgradeContainer/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="LevelUpScreen/UpgradeContainer/HBoxContainer/DescriptionContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
text = "fsdhdfhdfhfd"
fit_content = true
